fixed texture stretch, fixed holes order in controls, improved layout

--- a/css/main.sass
+++ b/css/main.sass
@@ -20,11 +20,12 @@ h2
   input[type=range]
     vertical-align: middle
     width: 200px
+    margin-bottom: 10px
 
   label
     font-family: monospace
-    width: 120px
-    height: 1.9em
+    width: 220px
+    height: 0.8em
     display: inline-block
 
   em
